// Minimal test to find exactly what's broken in the streaming architecture
const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');

async function testStreamingConnection() {
    console.log('üîç MINIMAL STREAMING CONNECTION TEST');
    console.log('===================================');
    
    // Test 1: Can we load the proto file?
    console.log('\nüìã 1. Testing proto file loading...');
    try {
        const protoPath = path.join(__dirname, 'proto/velvet_capture.proto');
        console.log('Proto path:', protoPath);
        
        const packageDefinition = protoLoader.loadSync(protoPath, {
            keepCase: true,
            longs: String,
            enums: String,
            defaults: true,
            oneofs: true
        });
        
        console.log('‚úÖ Proto file loaded successfully');
        
        const velvetCapture = grpc.loadPackageDefinition(packageDefinition).velvet_capture;
        console.log('‚úÖ gRPC package definition loaded');
        
        // Test 2: Can we create a gRPC client?
        console.log('\nüìã 2. Testing gRPC client creation...');
        const client = new velvetCapture.VelvetCaptureService(
            '127.0.0.1:50051',
            grpc.credentials.createInsecure()
        );
        console.log('‚úÖ gRPC client created');
        
        // Test 3: Can we connect to the server?
        console.log('\nüìã 3. Testing server connection...');
        
        // Simple connectivity test
        const deadline = Date.now() + 5000; // 5 second timeout
        const state = client.getChannel().getConnectivityState(true);
        console.log('Initial connection state:', state);
        
        return new Promise((resolve) => {
            client.waitForReady(deadline, (error) => {
                if (error) {
                    console.error('‚ùå Connection failed:', error.message);
                    console.log('üîß This means:');
                    console.log('   - Rust service might not be running on port 50051');
                    console.log('   - Or there\'s a networking issue');
                    console.log('   - Or the gRPC server isn\'t accepting connections');
                } else {
                    console.log('‚úÖ Successfully connected to Rust service!');
                    
                    // Test 4: Can we make a simple call?
                    console.log('\nüìã 4. Testing brain context stream...');
                    
                    const request = {
                        include_audio: false,
                        include_patterns: false,
                        confidence_threshold: 0.5
                    };
                    
                    try {
                        const stream = client.streamBrainContext(request);
                        
                        stream.on('data', (contextUpdate) => {
                            console.log('üö® RECEIVED DATA FROM RUST SERVICE:');
                            console.log('   Screen text length:', contextUpdate.screen_text.length);
                            console.log('   Screen text preview:', contextUpdate.screen_text.substring(0, 100));
                            console.log('   OCR confidence:', contextUpdate.ocr_confidence);
                            console.log('‚úÖ STREAMING ARCHITECTURE IS WORKING!');
                        });
                        
                        stream.on('error', (error) => {
                            console.error('‚ùå Stream error:', error);
                        });
                        
                        stream.on('end', () => {
                            console.log('üîö Stream ended');
                        });
                        
                        console.log('‚úÖ Stream request sent, waiting for data...');
                        
                    } catch (streamError) {
                        console.error('‚ùå Stream creation failed:', streamError);
                    }
                }
                resolve();
            });
        });
        
    } catch (error) {
        console.error('‚ùå Test failed:', error);
        console.log('\nüîß DEBUGGING HINTS:');
        console.log('   - Check if proto file exists at:', path.join(__dirname, 'proto/velvet_capture.proto'));
        console.log('   - Check if @grpc/grpc-js is installed: npm list @grpc/grpc-js');
        console.log('   - Make sure you\'re running from the velvet-app directory');
    }
}

// Run the test
testStreamingConnection().then(() => {
    console.log('\n===================================');
    console.log('üîç Test complete');
    console.log('If you see "STREAMING ARCHITECTURE IS WORKING!" above,');
    console.log('then the issue is in Electron\'s integration, not the services.');
    console.log('If you see connection errors, the Rust service isn\'t running.');
}).catch(console.error);